--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.10",
+    "next": "12.0.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
+    "@types/node": "^17.0.15",
+    "@types/react": "^17.0.39",
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "typescript": "^4.5.5"
   }
 }
