--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@prismicio/client": "5.1.1",
+    "hamburger-react": "^2.4.1",
     "next": "12.0.6",
     "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-modal": "^3.14.4",
     "sass": "^1.49.7"
   },
   "devDependencies": {
